--- a/website code/mcdegreeplanning.html
+++ b/website code/mcdegreeplanning.html
@@ -19,9 +19,12 @@
         
 
     </div>
-    <div class='content-wrapper'>
+    <div class='content-wrapper' style="padding-top: 20px; padding-bottom: 20px;">
+      <div class="topnav">
+      <input type="text" placeholder="Copy and paste the URL for your program requirements">
+      </div>
     
-      <div class="row" style="align-content: center;">
+      <!-- <div class="row" style="align-content: center;">
         <label for="year">Year: </label>
         <select id="year">
           <option value="U0">U0</option>
@@ -77,7 +80,7 @@
         function majorList() {
 
         }
-    </script>
+    </script> -->
 </body>
 
 
