--- a/website code/mcdegreeplanning.html
+++ b/website code/mcdegreeplanning.html
@@ -81,6 +81,11 @@
 
         }
     </script> -->
+        <div class="content-wrapper" style="background-color: rgb(197, 95, 95); align-content: center;">
+    <form action="" method="get">
+      Link to ecalendar page <input type="text" name="user_link">
+      <input type="submit" name="submit_button" value="Submit">
+  </form>
 </body>
 
 
