removed placeholder button (aesthetic changes)

--- a/website code/mcdegreeplanning.html
+++ b/website code/mcdegreeplanning.html
@@ -20,9 +20,6 @@
 
     </div>
     <div class='content-wrapper' style="padding-top: 20px; padding-bottom: 20px;">
-      <div class="topnav">
-      <input type="text" placeholder="Copy and paste the URL for your program requirements">
-      </div>
     
       <!-- <div class="row" style="align-content: center;">
         <label for="year">Year: </label>
@@ -81,9 +78,9 @@
 
         }
     </script> -->
-        <div class="content-wrapper" style="background-color: rgb(197, 95, 95); align-content: center;">
+        <div class="content-wrapper" style="background-color: rgb(197, 95, 95); align-content: center; padding: 5px;">
     <form action="" method="get">
-      Link to ecalendar page <input type="text" name="user_link">
+      Link to eCalendar page <input type="text" name="user_link">
       <input type="submit" name="submit_button" value="Submit">
   </form>
 </body>
