added website header

--- a/website code/mcdegreeplanning.html
+++ b/website code/mcdegreeplanning.html
@@ -78,11 +78,15 @@
 
         }
     </script> -->
-        <div class="content-wrapper" style="background-color: rgb(197, 95, 95); align-content: center; padding: 5px;">
-    <form action="" method="get">
-      Link to eCalendar page <input type="text" name="user_link">
-      <input type="submit" name="submit_button" value="Submit">
-  </form>
+    <div class="content-wrapper" style="background-color: rgb(197, 95, 95); align-content: center; padding: 5px;">
+      <p>Prepare for your years at McGill by creating a full plan of your degree!</p>
+    </div>
+    <div class="content-wrapper" style="background-color: rgb(197, 95, 95); align-content: center; padding: 5px;">
+      <form action="" method="get">
+        Insert the eCalendar link to program: <input type="text" name="user_link">
+        <input type="submit" name="submit_button" value="Submit">
+      </form>
+    </div>
 </body>
 
 
