--- a/website code/mcdegreeplanning.html
+++ b/website code/mcdegreeplanning.html
@@ -14,18 +14,16 @@
     </style>
 </head>
 <body id="home">
-    <div class="content-wrapper" style="background-color: rgb(197, 95, 95); align-content: center;">
+    <div class="content-wrapper" style="background-color: rgb(197, 95, 95); align-content: center; border-radius: 10px;">
         <p style="color:white; font-size: 50px; text-align: center;">McGill Degree Planning</p>
-        
-
     </div>
-    <div class='content-wrapper' style="padding-top: 20px; padding-bottom: 20px;">
-      <div class="content-wrapper" style="background-color: rgb(197, 95, 95); align-content: center; padding: 5px;">
+    <div class='content-wrapper' style="padding-top: 20px; padding-bottom: 20px; border-radius: 10px;">
+      <div class="content-wrapper" style="background-color: rgb(197, 95, 95); align-content: center; padding: 5px; border-radius: 10px;">
         <p>Prepare for your years at McGill by creating a full plan of your degree!</p>
       </div>
-      <div class="content-wrapper" style="background-color: rgb(197, 95, 95); align-content: center; padding: 5px;">
+      <div class="content-wrapper" style="background-color: rgb(197, 95, 95); align-content: center; padding: 5px; border-radius: 10px;">
         <form action="" method="get">
-          Insert the eCalendar link to program: <input type="text" name="user_link">
+          Insert the eCalendar link to your program: <input type="text" name="user_link">
           <input type="submit" name="submit_button" value="Submit">
         </form>
       </div>
